# tropical-neural-network

./: README.md  stack.yaml  tropical-neural-networks.cabal
src/: Main.hs
