name:                tropical-neural-networks
version:             0.1.0.0
synopsis:            Neural networks as linear functions over tropical semirings.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          phischu3000@googlemail.com
copyright:           2018 Philipp Schuster
category:            Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tropical-neural-networks
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && < 5,
                       linear >=1.20.7 && <1.21,
                       ad >=4.3.5 && <4.4
